2004-08-20  Frederic Crozat  <fcrozat@mandrakesoft.com>

	* gnome-wp-capplet.c: (gnome_wp_icon_theme_changed),
	(wallpaper_properties_init):
	Use themed icon for window hint.

2004-08-16  Rodney Dawes  <dobey@novell.com>

	* gnome-wp-capplet.c (wallpaper_properties_clicked):
	Handle the GTK_RESPONSE_DELETE_EVENT case as well

	Fixes #150273

2004-08-15  Rodney Dawes  <dobey@novell.com>

	* gnome-wp-item.c (gnome_wp_item_update_description):
	Add "W x H pixels" to description, and remove file size
	Mark the description string for translation as well

2004-07-19  Rodney Dawes  <dobey@novell.com>

	* gnome-wp-capplet.c (gnome_wp_remove_wallpaper, gnome_wp_list_sort):
	Free what we get with gtk_tree_model_get

	Fixes #147403

2004-07-15  Rodney Dawes  <dobey@novell.com>

	* gnome-wp-item.c (gnome_wp_item_new):
	Check that item->fileinfo is not NULL, before trying to use a
	string variable inside the struct for a strncmp

	Fixes #147373

2004-06-28  Rodney Dawes  <dobey@novell.com>

	* *.[ch]: Update copyright info to have correct years (2003-2004)

	* gnome-wp-capplet.c (gnome_wp_capplet_scroll_to_item):
	Abstract this code out so that we don't have to duplicated it every
	time we want to scroll to a particular item in the list

	(gnome_wp_add_image): Update this to return the new item that we
	created, and don't scroll to or set as the wallpaper, every time we
	call this function
	Use the new gnome_wp_item_new () call to create items

	(gnome_wp_add_images): Change the API to not use the files argument
	any longer, as we don't need it without the GTK+ 2.2 compat code
	Add all the items to the list and select the last one when finished

	(gnome_wp_file_open_dialog): Update to not pass in the files argument
	to gnome_wp_add_images () and free the GSList of filenames

	(bg_add_multiple_files): merge this code into the normal callback for
	when images are dragged to the dialog

	(bg_properties_dragged_image): Don't check if the list is more than